--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>{{title}}</h1>
-<app-jobs></app-jobs>
+<nav>
+  <a routerLink="/home">Dashboard</a><br>
+  <a routerLink="/jobs">Jobs</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
