--- a/src/app/job-detail/job-detail.component.html
+++ b/src/app/job-detail/job-detail.component.html
@@ -1,3 +1,5 @@
+<button (click)="goBack()">go back</button>
+
 <div *ngIf="job">
     <h2>{{job.jobcode | uppercase}} Details</h2>
   <div><span>id: </span>{{job.id}}</div>
