--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -1,19 +1,18 @@
-<!-- <h2>{{job.client | uppercase}} Details</h2>
-<div><span>id: </span>{{job.id}}</div>
-<div><span>client: </span>{{job.client}}</div>
-<div><span>job code: </span>{{job.jobcode}}</div>
-
-<div>
-    <label for="jobcode">Job code: </label>
-    <input id="jobcode" [(ngModel)]="job.jobcode" placeholder="jobcode">
-  </div> -->
-
 <h2>My Jobs</h2>
-<ul class="jobs">
+
+<!-- Original with direct binding (onSelect)-->
+<!-- <ul class="jobs">
     <li *ngFor="let job of jobs" (click)="onSelect(job)" [class.selected]="job === selectedJob">
         <span class="badge">{{job.id}}</span> {{job.client}} {{job.jobcode}}
     </li>
-</ul>
+</ul> -->
 
+<!-- Revised to use routes -->
 
-<app-job-detail [job]="selectedJob"></app-job-detail>
+<ul class="jobs">
+    <li *ngFor="let job of jobs">
+      <a routerLink="/detail/{{job.id}}">
+        <span class="badge">{{job.id}}</span> {{job.client}} {{job.jobcode}}
+      </a>
+    </li>
+  </ul>
