--- a/src/app/job-form-redux/job-form-redux.component.html
+++ b/src/app/job-form-redux/job-form-redux.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="jobNewForm" >
+<form [formGroup]="jobNewForm" (ngSubmit)="onSubmit()">
 
   <label for="first-name">ID: </label>
   <input id="first-name" type="text" formControlName="id">
@@ -11,5 +11,8 @@
 
   <label for="last-name">Comment: </label>
   <input id="last-name" type="text" formControlName="comment">
+
+  <p>Complete the form to enable button.</p>
+  <button type="submit" [disabled]="!jobNewForm.valid">Submit</button>
 
 </form>
