--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
-<app-job-form></app-job-form>
+<!-- <app-job-form></app-job-form> -->
+<app-job-form-redux></app-job-form-redux>
