tested dynamic styling solution

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
 <router-outlet></router-outlet>
 <app-messages></app-messages>
 <!-- <app-job-form></app-job-form> -->
+<app-jobs-styling></app-jobs-styling>
 <app-job-form-redux></app-job-form-redux>
